update name user bdd

--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 # define your env variables for the test env here
-#DATABASE_URL="mysql://rnkj8918:ba1ad2parfumee@localhost:3306/rnkj8918_bld_parfume?serverVersion=mariadb-10.6.15"
-#DATABASE_URL="mysql://loic:admin@db_docker_symfony:3306/rnkj8918_bld_parfume?serverVersion=5.7"
-DATABASE_URL="mysql://loic:A@dminbld!30498@127.0.0.1:3306/u149933173_rnkj8918_bld_p?serverVersion=5.7"
+DATABASE_URL="mysql://u149933173_loic:A@dminbld!30498@127.0.0.1:3306/u149933173_rnkj8918_bld_p?serverVersion=5.7"
 MESSENGER_TRANSPORT_DSN=doctrine://default
 MAILER_DSN=
 #APP_ENV=dev
