--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,5 @@
-DATABASE_URL="mysql://loic:admin@127.0.0.1:3306/rnkj8918_bld_parfume?serverVersion=5.7"
+#DATABASE_URL="mysql://loic:admin@127.0.0.1:3306/rnkj8918_bld_parfume?serverVersion=5.7"
+DATABASE_URL="mysql://u149933173_loic:A@dminbld!30498@127.0.0.1:3306/u149933173_rnkj8918_bld_p?serverVersion=5.7"
 
 MESSENGER_TRANSPORT_DSN=doctrine://default
 
