--- a/.env.prod
+++ b/.env.prod
@@ -3,7 +3,8 @@ DATABASE_URL="mysql://u149933173_loic:A@dminbld!30498@127.0.0.1:3306/u149933173_
 
 MESSENGER_TRANSPORT_DSN=doctrine://default
 
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+#CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN="https://balade-parfumee-2ydzvfltv-loics-projects-c950e0a8.vercel.app"
 
 MYSQL_ROOT_PASSWORD= 
 MYSQL_DATABASE=rnkj8918_bld_parfume  
