update env cors

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default
 MAILER_DSN=
 #APP_ENV=dev
 #CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
-CORS_ALLOW_ORIGIN="https://balade-parfumee-2ydzvfltv-loics-projects-c950e0a8.vercel.app"
+CORS_ALLOW_ORIGIN=^.*$
 
 DB_USERNAME=root
 DB_PASSWORD=
