--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -9,7 +9,8 @@ nelmio_cors:
     paths:
         '^/':
             allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-            allow_headers: ['X-Custom-Auth', 'Content-Type', 'Authorization', 'Location']
+            #allow_headers: ['X-Custom-Auth', 'Content-Type', 'Authorization', 'Location']
+            allow_headers: ['*']
             allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTION']
             expose_headers: ['Link', 'Location']
             max_age: 3600
