--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -7,10 +7,9 @@ nelmio_cors:
         expose_headers: ['Link']
         max_age: 3600
     paths:
-        '^/':
+        '^/api/':
             allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-            #allow_headers: ['X-Custom-Auth', 'Content-Type', 'Authorization', 'Location']
-            allow_headers: ['*']
+            allow_headers: ['X-Custom-Auth', 'Content-Type', 'Authorization', 'Location']
             allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTION']
             expose_headers: ['Link', 'Location']
             max_age: 3600
