--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,9 +12,11 @@ services:
         bind :
             $monthlySubscription: '%env(ID_STRIPE_SUBSCRIPTION_MONTHLY)%'
             $quarterlySubscription: '%env(ID_STRIPE_SUBSCRIPTION_QUARTERLY)%'
-            $freeSubscription: '%env(ID_STRIPE_SUBSCRIPTION_FREE)%'
+            $freeSubscription: '%env(ID_STRIPE_SUBSCRIPTION_FREE)%'            
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
+    App\Security\AccessDecisionManager:
+        arguments: ['@security.access.decision_manager']
     App\:
         resource: '../src/'
         exclude:
