--- a/.env.local
+++ b/.env.local
@@ -1,11 +1,12 @@
 # define your env variables for the test env here
 #DATABASE_URL="mysql://rnkj8918:ba1ad2parfumee@localhost:3306/rnkj8918_bld_parfume?serverVersion=mariadb-10.6.15"
-#DATABASE_URL="mysql://root@127.0.0.1:3306/rnkj8918_bld_parfume?serverVersion=5.7"
-#DATABASE_URL="mysql://loic:admin@localhost:3306/rnkj8918_bld_parfume?serverVersion=5.7"
-DATABASE_URL="mysql://u149933173_loic:A@dminbld!30498@127.0.0.1:3306/u149933173_rnkj8918_bld_p?serverVersion=5.7"
+DATABASE_URL="mysql://root:root@127.0.0.1:8889/rnkj8918_bld_parfume?serverVersion=5.7"
+#DATABASE_URL="mysql://loic:admin@db_docker_symfony/rnkj8918_bld_parfume?serverVersion=5.7"
+#DATABASE_URL="mysql://u149933173_loic:A@dminbld!30498@127.0.0.1:3306/u149933173_rnkj8918_bld_p?serverVersion=5.7"
 
 MESSENGER_TRANSPORT_DSN=doctrine://default
 
+#CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 
 MYSQL_ROOT_PASSWORD= 
@@ -26,9 +27,9 @@ JWT_PASSPHRASE=changeMe
 
 MAILCHIMP_API_KEY="f9bbad25ccf8a9c006aa3bf3bc541329-us1"
 TWILIO_ACCOUNT_SID="ACcf8a767770f1fe5a87281181bae81f54"
-TWILIO_AUTH_TOKEN="37b89c684ca5bcd318d2376e865e3182"
+TWILIO_AUTH_TOKEN="6c28b6f676ce642cfbe8e8f89f95d1e3"
 ID_STRIPE_SUBSCRIPTION_FREE=0
 ID_STRIPE_SUBSCRIPTION_MONTHLY=1
 ID_STRIPE_SUBSCRIPTION_QUARTERLY=3
-ENDPOINT_SECRET=""
+ENDPOINT_SECRET="dlskdoeeorke0303EDSKDLK"
 STRIPE_SECRET_KEY=""
