--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
-#DATABASE_URL="mysql://loic:admin@127.0.0.1:3306/rnkj8918_bld_parfume?serverVersion=5.7"
-DATABASE_URL="mysql://u149933173_loic:A@dminbld!30498@127.0.0.1:3306/u149933173_rnkj8918_bld_p?serverVersion=5.7"
+#DATABASE_URL="mysql://u149933173_loic:A@dminbld!30498@127.0.0.1:3306/u149933173_rnkj8918_bld_p?serverVersion=5.7"
+DATABASE_URL="mysql://root:root@localhost:3306/rnkj8918_bld_parfume?serverVersion=5.7"
 
 MESSENGER_TRANSPORT_DSN=doctrine://default
 
@@ -24,7 +24,7 @@ JWT_PASSPHRASE=changeMe
 
 MAILCHIMP_API_KEY="f9bbad25ccf8a9c006aa3bf3bc541329-us1"
 TWILIO_ACCOUNT_SID="ACcf8a767770f1fe5a87281181bae81f54"
-TWILIO_AUTH_TOKEN="37b89c684ca5bcd318d2376e865e3182"
+TWILIO_AUTH_TOKEN="6c28b6f676ce642cfbe8e8f89f95d1e3"
 ID_STRIPE_SUBSCRIPTION_FREE=0
 ID_STRIPE_SUBSCRIPTION_MONTHLY=1
 ID_STRIPE_SUBSCRIPTION_QUARTERLY=3
