--- a/.env.local
+++ b/.env.local
@@ -6,8 +6,8 @@ DATABASE_URL="mysql://root:root@127.0.0.1:8889/rnkj8918_bld_parfume?serverVersio
 
 MESSENGER_TRANSPORT_DSN=doctrine://default
 
-#CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='^http?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+#CORS_ALLOW_ORIGIN=^.*$
 
 MYSQL_ROOT_PASSWORD= 
 MYSQL_DATABASE=rnkj8918_bld_parfume  
@@ -27,7 +27,7 @@ JWT_PASSPHRASE=changeMe
 
 MAILCHIMP_API_KEY="f9bbad25ccf8a9c006aa3bf3bc541329-us1"
 TWILIO_ACCOUNT_SID="ACcf8a767770f1fe5a87281181bae81f54"
-TWILIO_AUTH_TOKEN="6c28b6f676ce642cfbe8e8f89f95d1e3"
+TWILIO_AUTH_TOKEN="517bfb23f82134112eaf7e5505c67dd7"
 ID_STRIPE_SUBSCRIPTION_FREE=0
 ID_STRIPE_SUBSCRIPTION_MONTHLY=1
 ID_STRIPE_SUBSCRIPTION_QUARTERLY=3
