--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,15 +1,25 @@
 nelmio_cors:
     defaults:
-        origin_regex: true
-        allow_origin: ['*']
-        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['*']
-        expose_headers: ['Link']
-        max_age: 3600
+        allow_credentials: false
+        allow_origin: []
+        allow_headers: []
+        allow_methods: []
+        expose_headers: []
+        max_age: 0
+        hosts: []
+        origin_regex: false
+        forced_allow_origin_value: ~
+        skip_same_as_origin: true
     paths:
         '^/api/':
-            allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-            allow_headers: ['X-Custom-Auth', 'Content-Type', 'Authorization', 'Location']
-            allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTION']
-            expose_headers: ['Link', 'Location']
-            max_age: 3600            
+            allow_origin: ['http://192.168.1.23:3000/']
+            allow_headers: ['X-Custom-Auth']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
+        '^/':
+            origin_regex: true
+            allow_origin: ['^http://localhost:[0-9]+']
+            allow_headers: ['X-Custom-Auth']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
+            hosts: ['^api\.']
