various fix api

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,9 @@
 
 services:
     # default configuration for services in *this* file
+    App\EventListener\JwtCreatedListener:
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJwtCreated }
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
